# CleanMyMac

./: FEATURES.md  TECHNICAL_v1.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cleanup.rs  dev_tools.rs  disk_info.rs  mod.rs  scan.rs
src-tauri/src/models/: file_node.rs  mod.rs  scan_result.rs
src-tauri/src/scanner/: categorizer.rs  mod.rs  rules.rs  walker.rs
src/components/cleanup/: CleanupSummary.tsx  ConfirmDialog.tsx  DevJunkList.tsx
src/components/layout/: Shell.tsx  Sidebar.tsx
src/components/scanner/: CategoryChart.tsx  CleanupManager.tsx  FileList.tsx  FilterBar.tsx  ScanningPlaceholder.tsx
src/components/ui/: CleanupToast.tsx  FDAModal.tsx  GSAPCleanup3D.tsx  GSAPScanner3D.tsx  GlassIcon.tsx  TiltCard.tsx
src/components/visualizer/: Breadcrumbs.tsx  DirectoryList.tsx  SimpleSummary.tsx  Sunburst.tsx  Treemap.tsx
src/hooks/: use-cleanup.ts  use-dev-tools.ts  use-disk-info.ts  use-large-files.ts  use-scanner.ts
src/lib/: format.ts
src/pages/: Dashboard.tsx  DevTools.tsx  LargeFiles.tsx  Scanner.tsx  Settings.tsx  Visualizer.tsx
src/services/: tauri.ts
src/stores/: app-store.ts  cleanup-store.ts  scan-store.ts
src/types/: index.ts
